--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
   },
   "homepage": "https://github.com/jeggy/Nodejs-Todo-API#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
-    "oauth2-server": "^2.4.1"
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.14",
+    "oauth2-server": "^2.4.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
