--- a/package.json
+++ b/package.json
@@ -27,13 +27,26 @@
   },
   "homepage": "https://github.com/jeggy/Nodejs-Todo-API#readme",
   "dependencies": {
+    "Faker": "^0.7.2",
+    "bcrypt": "^0.8.6",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "faker": "^3.1.0",
+    "jwt-simple": "^0.5.0",
+    "method-override": "^2.3.5",
     "mongoose": "^4.4.14",
+    "morgan": "^1.7.0",
     "oauth2-server": "^2.4.1",
+    "oauth2orize": "^1.2.2",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth2-client-password": "^0.1.2"
   }
 }
