--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/jeggy/Nodejs-Todo-API#readme",
   "dependencies": {
-    "bcrypt": "^0.8.6",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.0",
     "cors": "^2.7.1",
     "express": "^4.13.4",
