--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.4.14",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.2.0",
     "passport-jwt": "^2.0.0"
   }
 }
