--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A todo application api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "docs": "apidoc -i app/ -o apidoc/ -t apiTemplate/"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,13 @@
   },
   "homepage": "https://github.com/jeggy/Nodejs-Todo-API#readme",
   "dependencies": {
+    "apidoc": "^0.17.6",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.0",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "jwt-simple": "^0.5.0",
-    "mongoose": "^4.4.14",
+    "mongoose": "^5.0.1",
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.2.0",
     "passport-jwt": "^2.0.0"
